fix(action.yml): fixing container definition

--- a/action.yml
+++ b/action.yml
@@ -12,7 +12,7 @@ inputs:
   service_definition:
     description: 'Service Definition'
     required: false
-    default: './service/container.yaml'
+    default: 'container.yaml'
   project_id: 
     description: 'Project ID'
     required: true
